2012-07-15  Albrecht Dreß

	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_add_message):
	fix mem leak on error.

2012-07-15  Albrecht Dreß

	* libbalsa/mailbox_imap.c (imap_cache_manager_new_from_file): do
	not leak open file on error.

2012-07-15  Albrecht Dreß

	* libbalsa/filter-funcs.c (libbalsa_filter_export_sieve): do not
	leak open file.

2012-07-15  Albrecht Dreß

	* libbalsa/address-book-ldap.c
	(libbalsa_address_book_ldap_get_address): drop useless
	assignment to nick_name, fix mem leak;
	(libbalsa_address_book_ldap_modify_address): fix mem leak.

2012-07-15  Albrecht Dreß

	* libbalsa/address-book-extern.c (parse_externq_file): pipe
	stream must be closed with pclose, not fclose.

2012-07-13  Peter Bloomfield

	* libbalsa/mime.c (process_mime_part): build
	--with-html-widget=no; fixes bgo #679869 (Aljosha).

2012-07-04  Peter Bloomfield

	* src/main-window.c: manage sensitivity of check mail button in
	unthreaded build.

2012-06-27  Peter Bloomfield

	* src/save-restore.c (config_load_sections), (config_mailbox_init),
	(config_address_book_load), (config_address_books_load),
	(config_identities_load), (load_mru): prepend to GList and
	reverse it, instead of appending; use g_list_free_full().

2012-06-25  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_msgno_filt_out),
	(lbm_msgno_filt_check): find node once, not twice.

2012-06-19  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_node_has_unseen_child),
	(lbm_get_index_entry), (mbox_model_get_value): get index entry
	by message number instead of by GNode.

2012-06-13  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_inserted_idle_cb): lock mutex
	before signalling cond.

2012-06-13  Peter Bloomfield

	* src/balsa-app.c (find_url_idle_cb): lock mutex before
	signalling cond.

2012-06-12  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_message_expunged_cb),
	(lbm_msgno_removed_idle_cb), (libbalsa_mailbox_msgno_removed),
	(lbm_msgno_filt_check_idle_cb),